[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/art/timer/fire.png" type="Texture" id=1]
[ext_resource path="res://assets/art/timer/bomb.png" type="Texture" id=2]
[ext_resource path="res://assets/art/timer/explosion.png" type="Texture" id=3]
[ext_resource path="res://entities/Timer.gd" type="Script" id=4]
[ext_resource path="res://assets/art/timer/numbers.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 14, 11 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 11, 14, 11 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 0, 16, 11, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 11, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 0, 32, 11, 16 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 6 ) ],
"loop": false,
"name": "2",
"speed": 1.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "1",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "3",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "0",
"speed": 5.0
} ]

[node name="Timer" type="Node2D"]
script = ExtResource( 4 )

[node name="FireSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
frame = 1
playing = true

[node name="BombSprite" type="Sprite" parent="."]
position = Vector2( 12, 150 )
texture = ExtResource( 2 )

[node name="ExplosionSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 24, 136 )
texture = ExtResource( 3 )

[node name="Ropes" type="Node2D" parent="."]

[node name="IntervalTimer" type="Timer" parent="."]

[node name="Numbers" type="AnimatedSprite" parent="."]
position = Vector2( 11, 132 )
frames = SubResource( 5 )
animation = "0"

[connection signal="timeout" from="IntervalTimer" to="." method="_on_IntervalTimer_timeout"]
